tests/errors/lifetime/loan/borrower_overwrite_new_loan_active.sim

        extern fn use_mut(r: &mut i64);
        fn f(x: i64, y: i64) {
          r: &mut i64;
          entry:
            r = &mut x;
            r = &mut y;
            y = 42;
            call use_mut(move r);
            return
        }
        